[gd_scene load_steps=4 format=2]

[ext_resource path="res://map.jpg" type="Texture" id=1]
[ext_resource path="res://blips.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]

[node name="Node" type="Node"]
__meta__ = {
"_edit_horizontal_guides_": [ -768.635 ],
"_edit_vertical_guides_": [ -768.115 ]
}

[node name="map" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="map"]

[node name="PlayerBlips" type="Node" parent="map"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[connection signal="ready" from="map/HTTPRequest" to="map" method="_on_HTTPRequest_ready"]
[connection signal="request_completed" from="map/HTTPRequest" to="map" method="_on_HTTPRequest_request_completed"]
